Added simple Authentication
